[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awaitable-tools"
authors = [
    {name="AlanBogarin", email="bogarin01alan@gmail.com"},
]
description = "Tools to bridge coroutines and non-coroutine awaitables in Python"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "async",
    "python",
    "awaitable",
    "tools",
    "AlanBogarin"
]
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/AlanBogarin/awaitable-tools"
"Bug Tracker" = "https://github.com/AlanBogarin/awaitable-tools/issues"

[project.optional-dependencies]
dev = [
    "twine>=4.0.2",
    "wheel>=0.42.0"
]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.setuptools.dynamic]
version = {attr="awaitable_tools.__version__"}
dependencies = {file="requirements.txt"}
